Align image text. Fix footer.

--- a/second/style.css
+++ b/second/style.css
@@ -1,19 +1,30 @@
 html, body {
-    background-color: darkgrey;
+    background-color: lightgrey;
     width: 100%;
     height: 100%;
+    font-family: Helvetica;
+    font-size: 14pt;
 }
 
 .container {
     background-color: white;
-}
-
-.top {
+    display: block;
     margin: 25px;
+    padding: 20px;
 }
 
 p {
-    margin: 0 auto;
+    margin: 10px 10px 25px 10px;
+    font-family: Helvetica;
+}
+
+button {
+    display: inline;
+    margin: 10px;
+    border: none;
+    padding: 15px 40px;
+    color: white;
+    font-size: 22px;
 }
 
 .red {
@@ -24,10 +35,11 @@ p {
     background-color: #4A90E2;
 }
 
-.middle{
-    
-}
-
 .forImg {
     background-color: #4A4A4A;
+    margin: 10px 10px 40px 10px;
+    padding: 125px;
+    font-size: 30px;
+    color: white;
 }
+
